2016/10/27 v123
    1. Update for WOW 7.1

2016/10/15: IGAS v120
    1. Fix for PLoop v155 version.

2016/10/01: IGAS v119
    1. Fix ActiveThread error for System.Array.
    2. Improve the dropdownlist so sub-menus won't be blocked by parent's

2016/09/30: IGAS v118
    1. Fix the aurapanel's refreshing.

2016/09/14: IGAS v117
    1. The PLoop is removed, it's a standalone addon now.

2016/09/13: IGAS v116
    1. Use RegisterAutoHide to fix the hover spell bindings not clear for IFSpellHandler.

2016/09/04: IGAS v115
    1. Fix action buttons for spells not in the spell books.

2016/09/01: IGAS v114
    1. The BagSlotHandler no longer refresh the buttons that is hidden, it should fix lags in some condition.

2016/08/29: IGAS v113
    1. Block noname totem seems shouldn't be seen.

2016/08/28: IGAS v112
    1. Fix the IFTotem and TotemBar.

2016/08/28: IGAS v111
    1. Fix the lag for sorting container's items.
    2. Fix error for IFPortrait.

2016/08/24: IGAS v110
    1. Add RegisterUnitEvent for System.Widget.Frame.

2016/08/22: IGAS v109
    1. Fix the baghandler for bank bag.

2016/08/22: IGAS v108
    1. Fix for custom handler, bag handler and bagslot handler.

2016/08/15: IGAS v107
    1. Fix the bagslot won't display count when first login.

2016/08/14: IGAS v106
    1. Fix error for TreeView.

2016/08/14: IGAS v105
    1. Fix bugs and finished the bag-slot handler.

2016/08/04: IGAS v104
    1. Fix show/hide api for IFRune, IFStagger, IFClassPower.

2016/08/02: IGAS v103
    1. The mask system would display the position or size of the target.

2016/07/31: IGAS v102
    1. Add TopToBottom, LeftoToRight property to IFSecurePanel.

2016/07/31: IGAS v101
    1. Recode the whole unit system, to build a more clearly interface system for unit elements.
    2. Update for new PLoop System.

2016/07/22: IGAS v100
    1. Fix the memory increment for layoutpanel system.

2016/07/22: IGAS v99
    1. Add 'INCLUDE_NAME_PLATE_ONLY' for aura filter.

2016/07/22: IGAS v98